--- a/example6-3.html
+++ b/example6-3.html
@@ -8,28 +8,27 @@
 <body>
     <form action="">
         <table>
-        <tr>
-            <td>ชื่อและนามสกุล</td>
+            <tr>
+            <td><label for="name">ชื่อและนามสกุล"</label></td>
             <td><input type="text" name="name" id="name" placeholder="ชื่อ" size="10">
             <input type="text" name="name" id="name" placeholder="นามสกุล" size="14"></td>
             </tr>
-            <br>
             <tr>
-                <td>ที่อยู่บรรทัดที่1:</td>
+                <td><label for="address"></label>ที่อยู่บรรทัดที่1:</td>
                 <td><input type="text" placeholder="เลขที่ ซอย ถนน" size="30"></td>
             </tr>
-                <td>ที่อยู่บรรทัดที่2:</td>
+                <td><label for="address"></label>ที่อยู่บรรทัดที่2:</td>
                 <td><input type="text" placeholder="แขวง/ตำบล เขต/อำเภอ จังหวัด" size="30"></td>
-        </tr>
-                <td>รหัสไปรษณีย์:</td>
-                <td><input type="number" size="10" maxlength="10"></td>
-    </tr>
-                <td>โทร:</td>
+            </tr>
+                <td><label for="address"></label>รหัสไปรษณีย์:</td>
+                <td><input type="number" size="10" maxlength="5"></td>
+            </tr>
+                <td><label for="phone"></label>โทร:</td>
                 <td><input type="number"  placeholder="ใส่เฉพาะตัวเลข" size="30" maxlength="10"></td>
-</tr>
-                 <td>อีเมล:</td>
-                 <td><input type="email" size="30"></td>
-</tr>
+            </tr>
+                 <td><label for="address">อีเมล</label></td>
+                 <td><input type="email" name="" size="30"></td>
+            </tr>
             </table>
     </form>
 </body>
