--- a/example7-5.html
+++ b/example7-5.html
@@ -28,6 +28,6 @@
     <p>ข้อความของแท็กที่ไม่กำหนด id</p>
     <p id="p1">ข้อความของแท็กที่กำหนดค่า id="p1"</p>
     <p id="p2">ข้อความของแท็กที่กำหนดค่า id="p2"</p>
-    <p>ข้อความของแท็กที่กำหนดค่า id="p3"</p>
+    <p id="p3">ข้อความของแท็กที่กำหนดค่า id="p3"</p>
 </body>
 </html>
